chore: update gradle and config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
+    namespace 'net.yrom.screenrecorder'
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "net.yrom.screenrecorder.demo"
+        applicationId "net.yrom.screenrecorder"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 15
         versionName '2.4.2'
+    }
+
+    buildFeatures {
+        buildConfig = true
     }
 
     compileOptions {
